# ikip

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  SOLUTION_DECK.md  VALIDATION.md  justfile  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md
contracts/codegen/: generate.py  validate.py
contracts/events/: audit-event.schema.json  deletion-job.schema.json  ingestion-job.schema.json
contracts/openapi/: api.v1.yaml
contracts/schemas/: abstention.schema.json  acl-policy.schema.json  answer.schema.json  citation.schema.json  evidence.schema.json  provenance.schema.json  statement-class.schema.json
db/: README.md  migrate.py
db/migrations/: 0001_initial_governed_store.sql  0002_cad_models.sql  0003_upload_pipeline.sql
deploy/compose/: docker-compose.yml
deploy/docker/: README.md  api.Dockerfile  nginx.conf  web.Dockerfile
docs/architecture/: 01-c4-context.md  02-c4-container.md  03-deployment.md  04-trust-boundary.md  05-sequence-query-flow.md  06-ingestion-pipeline.md  07-data-lifecycle.md
docs/decisions/: 0001-monorepo.md  0002-pgvector-with-scale-trigger.md  0003-authz-before-retrieval.md  0004-cad-tiered-handlers.md  README.md
docs/runbooks/: deletion-verification.md  upload-demo.md
docs/safety/: abstention-policy.md  acl-sync-and-freshness.md  conflict-and-authority-ranking.md  statement-classification.md
evaluation/: README.md  __init__.py  run.py
evaluation/benchmark/golden/: README.md
evaluation/benchmark/holdout/: README.md
infra/: README.md
services/api/: pyproject.toml
services/api/src/ikip_api/: __init__.py  app.py  dev_gateway.py  identity.py  schemas.py  services.py  uploads.py
services/api/src/ikip_ingestion/extract/: __init__.py  registry.py  sandbox.py
services/api/src/ikip_ingestion/extract/converters/: freecad_headless.py
services/api/src/ikip_ingestion/extract/handlers/: __init__.py  ole_props.py  step_occt.py  stl_trimesh.py
services/api/src/ikip_ingestion/stages/: quarantine.py  resolve_identity.py
services/api/tests/: test_api.py  test_uploads.py
services/gateway/: pyproject.toml
services/gateway/src/ikip_gateway/: __init__.py  prompt_isolation.py
services/ingestion/: pyproject.toml
services/ingestion/src/ikip_ingestion/: __init__.py
services/ingestion/src/ikip_ingestion/extract/: converter.py  mesh.py  registry.py  sandbox.py  types.py
services/ingestion/src/ikip_ingestion/extract/converters/: __init__.py
services/ingestion/src/ikip_ingestion/extract/handlers/: __init__.py  blocked.py
services/ingestion/src/ikip_ingestion/stages/: __init__.py  chunk.py  enrich.py  index.py  parse_ocr.py  quarantine.py  resolve_identity.py  validate.py
services/ingestion/tests/: test_cad_ingest.py  test_cad_phase2.py  test_cad_phase4.py
services/retrieval/: pyproject.toml
services/retrieval/src/ikip_retrieval/: __init__.py
services/retrieval/src/ikip_retrieval/adapters/: __init__.py  _acl_resolve.py  exact_index.py  lexical_index.py  pgvector_shape_store.py  pgvector_store.py
services/retrieval/src/ikip_retrieval/pipeline/: __init__.py  abstain.py  assemble_evidence.py  authorize.py  compose.py  merge_rerank.py  run.py  search_exact.py  search_lexical.py  search_relationship.py  search_semantic.py  search_shape.py  types.py  validate.py
services/retrieval/src/ikip_retrieval/ports/: __init__.py  answer_gateway.py  search_channel.py  shape_store.py  vector_store.py
services/retrieval/tests/unit/: test_compose.py  test_exact_index.py  test_head.py  test_lexical_index.py  test_pipeline_order.py  test_shape_channel.py
tests/: test_migrations.py
tests/security/: README.md
tests/security/acl_leakage/: test_stale_acl_does_not_leak.py
tests/security/trust_boundary/: test_authorize_before_retrieval.py
web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
web/src/components/: badges.tsx  primitives.tsx
web/src/features/admin/: AdminPanel.tsx
web/src/features/asset-profile/: AssetProfilePanel.tsx
web/src/features/identity-bar/: IdentityBar.tsx
web/src/features/review-queue/: ReviewQueuePanel.tsx
web/src/features/source-viewer/: EvidenceDrawer.tsx
web/src/features/uploads/: UploadPanel.tsx
web/src/features/workspace/: WorkspacePanel.tsx
web/src/lib/: api.ts  api.upload.test.ts  identity-context.tsx  types.ts
