[project]
name = "ikip-api"
version = "0.0.0"
description = "Application API — authentication, authorization enforcement, orchestration, and audit."
requires-python = ">=3.12"
dependencies = ["ikip-authz", "ikip-contracts", "ikip-audit", "ikip-observability"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_api"]
