[project]
name = "ikip-api"
version = "0.0.0"
description = "Application API — authentication, authorization enforcement, orchestration, and audit."
requires-python = ">=3.12"
dependencies = [
    "ikip-authz",
    "ikip-contracts",
    "ikip-retrieval",
    "ikip-audit",
    "ikip-observability",
    "ikip-ingestion",
    "python-multipart>=0.0.20",
    "pypdf>=5",
    "boto3>=1.35",
    "psycopg[binary]>=3.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_api"]
