[project]
name = "ikip-gateway"
version = "0.0.0"
description = "Model Gateway — approved-model egress boundary with prompt isolation and untrusted-output validation."
requires-python = ">=3.12"
dependencies = ["ikip-contracts", "ikip-statements", "ikip-audit", "ikip-observability"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_gateway"]
