[project]
name = "ikip-ingestion"
version = "0.0.0"
description = "Ingestion Workers — quarantine, parse/OCR, chunk, enrich, resolve identity, index; idempotent and deletion-aware."
requires-python = ">=3.12"
dependencies = ["ikip-contracts", "ikip-provenance", "ikip-audit", "ikip-observability"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_ingestion"]
