[project]
name = "ikip-ingestion"
version = "0.0.0"
description = "Ingestion Workers — quarantine, parse/OCR, chunk, enrich, resolve identity, index; idempotent and deletion-aware."
requires-python = ">=3.12"
dependencies = [
    "ikip-contracts",
    "ikip-provenance",
    "ikip-audit",
    "ikip-observability",
    "trimesh>=4",
    "numpy>=1.26",
]

# CAD STEP geometry extraction needs an OCCT binding. cadquery-ocp is the pip/uv-installable
# wheel (pythonocc-core is conda-forge only). It is heavy (pulls vtk + matplotlib), so it is
# OPTIONAL: install with `uv sync --extra cad-step`. When absent, the STEP handler declares
# itself unavailable and STEP files route to the review queue (tiered degradation) rather
# than crashing. Conda alternative: `conda install -c conda-forge pythonocc-core`.
[project.optional-dependencies]
cad-step = ["cadquery-ocp>=7.8"]
# OLE compound-file metadata extraction (SolidWorks, CATIA, etc.). Pure-Python; pip/uv-installable.
# Install with `uv sync --extra cad-ole`. When absent, OLE files route to review (METADATA_ONLY
# tier unavailable) rather than crashing — same tiered-degradation pattern as cad-step.
cad-ole = ["olefile>=0.47"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_ingestion"]
