[project]
name = "ikip-ingestion"
version = "0.0.0"
description = "Ingestion Workers — quarantine, parse/OCR, chunk, enrich, resolve identity, index; idempotent and deletion-aware."
requires-python = ">=3.12"
dependencies = [
    "ikip-contracts",
    "ikip-provenance",
    "ikip-audit",
    "ikip-observability",
    "trimesh>=4",
    "numpy>=1.26",
]

# CAD STEP geometry extraction needs an OCCT binding. cadquery-ocp is the pip/uv-installable
# wheel (pythonocc-core is conda-forge only). It is heavy (pulls vtk + matplotlib), so it is
# OPTIONAL: install with `uv sync --extra cad-step`. When absent, the STEP handler declares
# itself unavailable and STEP files route to the review queue (tiered degradation) rather
# than crashing. Conda alternative: `conda install -c conda-forge pythonocc-core`.
[project.optional-dependencies]
cad-step = ["cadquery-ocp>=7.8"]
# OLE compound-file metadata extraction (SolidWorks, CATIA, etc.). Pure-Python; pip/uv-installable.
# Install with `uv sync --extra cad-ole`. When absent, OLE files route to review (METADATA_ONLY
# tier unavailable) rather than crashing — same tiered-degradation pattern as cad-step.
cad-ole = ["olefile>=0.47"]

# Tier-3 conversion (Phase 4 §G) uses FreeCAD to convert proprietary CAD to STEP. FreeCAD is
# NOT a pip wheel — it is a system/conda application shipping its own Python. It is therefore
# an OPTIONAL DEPLOYMENT COMPONENT, not a Python dependency: install it via the OS package
# manager or `conda install -c conda-forge freecad`, then point IKIP_FREECAD_CMD at the
# `freecadcmd` executable. The converter (extract/converters/freecad_headless.py) invokes it
# as a SUBPROCESS inside the sandbox — never imported in-process. When FreeCAD is absent the
# converter is disabled and Tier-3 files route to review, exactly like cad-step/cad-ole
# degrade. Swapping FreeCAD for a licensed conversion SDK is a change to that one module.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikip_ingestion"]
